--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta title="-ach, -ingen, -zell: Investigating place name endings in Germany">
-        <meta description="A visual exploration of the spatial patterns in the endings of German town and village names.">
+        <meta title="-ești, -ov, -oara: Investigating place name endings in Romania">
+        <meta description="A visual exploration of the spatial patterns in the endings of Romanian town and village names.">
         <style>
         	html, body{
         		font-family: "Avenir Next", "Helvetica Neue", Arial, sans;
@@ -30,12 +30,12 @@
     </head>
     <body>
     		<h1>
-    			-ach, -ingen, -zell
+    			-ești, -ov, -oara
     		</h1>
     		<p>
-    			A visual exploration of the spatial patterns in the endings of German town and village names.
+    			A visual exploration of the spatial patterns in the endings of Romanian town and village names.
     		</p>
-    		<p>I picked the most interesting suffixes from <a href="https://de.wikipedia.org/wiki/Ortsname">https://de.wikipedia.org/wiki/Ortsname</a> and cross-referenced them with a list of place names from <a href="http://www.geonames.org/export/">geonames</a>.
+                <p>This is a fork of Moritz Stefaner's <a href="http://truth-and-beauty.net/experiments/ach-ingen-zell">-ach, -ingen, -zell</a>. The suffixes were chosen more or less subjectively, with consultation by <a href="https://twitter.com/sarnthil">@sarnthil</a>. The data is the same <a href="http://www.geonames.org/export/">geonames</a> dataset.
 
             </p>
             <p>
@@ -43,16 +43,17 @@
             Darker colors indicate a higher proportion of place names with the respective suffix in a geographic cell. Hover over a cell for a while to see a tooltip with the place names.
             </p>
             <p style="">
-                Please note: My approach is not 100% scientific, as I only match the letters at the end of the string, not actual syllables. So, Kirchbach matches -ach. #justsaying
+            Please note: My approach is not 100% scientific, as I only match the letters at the end of the string, not actual syllables.<!-- So, Kirchbach matches -ach. #justsaying -->
             </p>
 
     		<p>
-    			Yet, it's a dataset I always found interesting to explore; plus, this quick experiment gave me the opportunity to play a bit with a few new tools and libraries I wanted to learn more about. Find the code at: <a href="http://github.com/moritzstefaner/ach-ingen-zell">http://github.com/moritzstefaner/ach-ingen-zell</a>
+    			Find the code at: <a href="http://github.com/L3viathan/esti-ov-oara">http://github.com/L3viathan/esti-ov-oara</a>
     		</p>
-
+<!--
     		<p>
     			<a href="http://truth-and-beauty.net">Moritz Stefaner</a>, 2016
     		</p>
+-->
 
     		<div id="app">
     			<p>Loading…</p>
